[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Enemies/Goblin_Shaman.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Actors/goblin_shaman.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/HealthBar.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.48481, 6.21742 )

[sub_resource type="CircleShape2D" id=2]
radius = 73.1829

[sub_resource type="CircleShape2D" id=3]
radius = 45.8954

[sub_resource type="Animation" id=4]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 7, 7, 7, 7 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 4, 5, 6, 0, 4, 5, 6, 0, 0 ]
}

[node name="goblin_shaman" type="KinematicBody2D" groups=[
"Enemy",
]]
position = Vector2( -0.352448, 0.25 )
collision_layer = 2147483652
collision_mask = 3
script = ExtResource( 2 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = -4.12946
margin_top = -5.89921
margin_right = -4.12946
margin_bottom = -5.89921
rect_scale = Vector2( 0.11, 0.2 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0.16587, -0.0286713 )
scale = Vector2( 0.101101, 0.116061 )
texture = ExtResource( 1 )
hframes = 8
frame = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.944371, 3.31207 )
shape = SubResource( 1 )

[node name="wzrok" type="Area2D" parent="."]
position = Vector2( 0.148651, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wzrok"]
position = Vector2( 0.144784, 2.58946 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.707108, 1.41422 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Atak = SubResource( 4 )
anims/Die = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Walk = SubResource( 7 )

[node name="Timer" type="Timer" parent="." groups=[
"Enemy",
]]
wait_time = 2.0
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 2.47765, 4.71937 )
[connection signal="body_entered" from="wzrok" to="." method="_on_wzrok_body_entered"]
[connection signal="body_exited" from="wzrok" to="." method="_on_wzrok_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
